# gfp-cad

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cad-acad/: Cargo.toml
crates/cad-acad/examples/: render_yamanakako.rs
crates/cad-acad/src/: bridge.rs  lib.rs  renderer.rs
crates/cad-core/: Cargo.toml
crates/cad-core/examples/: yamanakako.rs
crates/cad-core/src/: lib.rs  model.rs  units.rs
crates/cad-core/src/model/: building.rs  floor.rs  grid.rs  opening.rs  room.rs  wall.rs
crates/cad-core/tests/: model_test.rs
crates/cad-db/: Cargo.toml
crates/cad-db/schema/: init.surql
crates/cad-db/src/: client.rs  config.rs  lib.rs  models.rs  repository.rs
crates/cad-db/tests/: e2e_test.rs
crates/cad-dxf/: Cargo.toml
crates/cad-dxf/examples/: export_yamanakako.rs
crates/cad-dxf/src/: lib.rs  writer.rs
crates/cad-mcp/: Cargo.toml
crates/cad-mcp/src/: main.rs  server.rs
